--- a/jest_haste_map/package.json
+++ b/jest_haste_map/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+      "start": "node index.js"
+  },
   "dependencies": {
     "jest-haste-map": "^22.4.3"
   }
