--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ glob = "0.2.11"
 regex = "0.2"
 serde = "1.0.58"
 serde_derive = "1.0.58"
-serde_json = "1.0.17"
 lazy_static = "1.0"
 bincode = "1.0.0"
 rayon = "1.0"
+num_cpus = "1.0"
