--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "build": "./scripts/build.sh",
     "build-release": "./scripts/build.sh release"
+  },
+  "devDependencies": {
+    "jest": "^22.4.4"
   }
 }
